2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Editor.ComponentModel/WebFormReferenceManager.cs: Use
	  case-insensitive type name lookups.
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Fix build with M.A.
	  0.3.
	* AspNetEdit.Integration/MonoDevelopProxy.cs: Dynamically look up the
	  IClass when needed, as it's a fragile handle. Improve robustness of
	  identifier checking and locating the generated members in
	  non-designer parts.

2008-06-10  Michael Hutchinson <mhutchinson@novell.com> 

	

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, AspNetEdit.addin.xml: Bump MD version.

2008-05-23  Michael Hutchinson  <mhutchinson@novell.com> 

	* configure: Bump version.
	* AspNetEdit.make: Fix dist. Fix build on non-bash sh.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Integration/MonoDevelopProxy.cs: Track api
	  changes.

2008-05-20  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Integration/EditorProcess.cs: Add addin dependency to
	  remote process object.

2008-05-19  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Integration/ToolboxProvider.cs,
	  AspNetEdit.make, AspNetEdit.addin.xml: Remove unneeded toolbox
	  provider.
	* AspNetEdit.Integration/AspNetEditViewContent.cs,
	  AspNetEdit.Integration/MonoDevelopProxy.cs: Track message service
	  API changes. Thanks to John Garrison.

2008-02-26  Michael Hutchinson  <mhutchinson@novell.com> 

	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs:
	* AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs:
	* AspNetEdit.Editor.Persistence/DesignTimeParser.cs:
	* AspNetEdit.Editor.Persistence/ParsingObject.cs:
	Track namespace changes in MonoDevelop.Aspnet.

2008-01-31  Michael Hutchinson  <mhutchinson@novell.com> 

	* AspNetEdit.mdp:
	* configure:
	* AspNetEdit.make: Get AspNetEdit building again.
	
	* AspNetEdit.Editor.UI/RootDesignerView.cs: 