@@ -1,3 +1,8 @@
+2008-07-29  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* AspNetEdit.Integration/AspNetEditViewContent.cs:
+	* AspNetEdit.Integration/MonoDevelopProxy.cs: Port to new DOM.
+
 2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* AspNetEdit.Editor.ComponentModel/WebFormReferenceManager.cs: Use
